updated mastodon link

--- a/_data.yml
+++ b/_data.yml
@@ -17,7 +17,7 @@ topmenu:
 
 socials:
   - name: Mastodon
-    link: https://fosstodon.org/@keyboardcrunch
+    link: https://infosec.town/@keyboardcrunch
     img: null
 
   - name: GitHub
